# persona

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHECKLIST.md  COMPETITIVE_ANALYSIS.md  Competitor-introduction.md  DOCUMENTATION_UPDATE_SUMMARY.md  PRD-Persona.md  PROGRESS_FINAL.md  README.md  TASKS.md
backend/: QUICKSTART.md  README.md  batch_upload_books.py  requirements.txt  start.sh  test.sh  test_api.py  test_chapter_detection.sh  test_dialogue_generation.sh  test_document_parser.sh  test_full_api.sh  test_lunyu.sh  test_outline_generator.sh  test_persona_api.sh  test_persona_builder.sh  test_persona_comparison.sh  test_persona_feixiaotong.sh  test_persona_optimized.sh  test_xiangtuzhongguo.sh
backend/app/: database.py  main.py
backend/app/api/: audiences.py  books.py  diagnostics.py  diff.py  evidence.py  health.py  model_providers.py  outlines.py  outputs.py  personas.py  scripts.py  websocket.py
backend/app/crud/: __init__.py  crud_audience.py  crud_book.py  crud_output.py  crud_providers.py  crud_series.py
backend/app/models/: book.py  evidence.py  orm.py  output.py  (+2 more)
backend/data/: dialogue_podcast.db
books/: 理想国.txt  论语.txt
data/: dialogue_podcast.db
docs/history/: PROGRESS.md  PROGRESS_OPTIONS_ABC.md  PROGRESS_WEEK2.md
frontend/: DEVELOPMENT_PLAN.md  PROGRESS_PHASE1.md  PROGRESS_PHASE2.md  README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: create_rgba_icons.py
frontend/src-tauri/src/: lib.rs  main.rs
src/models/: dialogue.py
(+65 files in other folders)
